--- a/styles.css
+++ b/styles.css
@@ -42,4 +42,6 @@
 
 .clipped-img {
   clip-path: polygon(28% 20%, 100% 20%, 100% 100%, 0 100%);
+  overflow: hidden;
+  width: 100%;
 }
